change html view and add help

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,93 @@
 body {
-    background-color: black;
-    color: white;
+    background-color: #333;
+    color: #f5f5f5;
 }
 
-#canvas {
-    background-color: white;
+.title {
+    text-align: center;
+    border-bottom: .25rem double #f5f5f5;
+    margin: 0;
+    padding: 1rem;
+}
 
+.content {
+    margin: 0 1rem;
+}
+
+.drawing-space, 
+.tools-and-help {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.drawing-space > div {
+    display: flex;
+}
+
+.drawing-space > div > canvas {
+    background-color: #f5f5f5;
+    margin: 0 auto;
+}
+
+.drawing-space-title,
+.tools-title,
+.help-title {
+    text-align: center;
+}
+
+.tools {
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #f5f5f5;
+}
+
+.menu {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    margin: .5rem 1rem;
+}
+
+.menu > .menu-title {
+    width: 4rem;
+    font-weight: bold;
+}
+
+.menu > .menu-item {
+    display: flex;
+    flex-wrap: wrap;
+    gap: .5rem;
+}
+
+.menu > .menu-item > .color-select {
+    display: flex; 
+    flex-wrap: wrap;
+    align-items: center; 
+    gap: .25rem;
+}
+
+.help > .help-content {
+    margin: 1rem;
+}
+
+.help > .help-content > .help-item {
+    padding-bottom: .5rem;
+}
+
+.help-content > .help-item > h4,
+.help-content > .help-item > ul {
+    margin: 0;
+    padding-bottom: 0.25rem;
+}
+
+@media only screen and (min-width: 800px) {
+    .content {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+@media only screen and (min-width: 800px) and (max-width: 960px) {
+    .menu > .menu-item {
+        flex-direction: column;
+    }
 }
