add change node polygon

--- a/styles/style.css
+++ b/styles/style.css
@@ -85,6 +85,9 @@ body {
         justify-content: center;
         gap: 2rem;
     }
+    .tools-and-help {
+        border-left: 1px solid #f5f5f5;
+    }
 }
 
 @media only screen and (min-width: 800px) and (max-width: 960px) {
